feat: Backend  gcloud storage bucket

--- a/main_backend/Makefile
+++ b/main_backend/Makefile
@@ -1,10 +1,18 @@
+.PHONY: help deploy infra_deploy infra_destroy code_deploy test tofu_run_cmd
+
+SHELL := /bin/bash
+
 help: ## Show this help
 	@echo "Usage: make [target]"
 	@echo "Targets:"
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z0-9_-]+:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
 
-deploy: infra_deploy code_deploy ## Deploy the frontend infrastructure + code
-destroy: infra_destroy ## Destroy the frontend infrastructure
+deploy: infra_deploy code_deploy ## Deploy the backend infrastructure + code
+destroy: infra_destroy ## Destroy the backend infrastructure
+
+test: ## Run tests
+	. ./source.sh && \
+		go test ./...
 
 tofu_run_cmd: ## Run a tofu command. Usage: make tofu_run_cmd CMD="command"
 	. ./source.sh && \
@@ -13,12 +21,7 @@ tofu_run_cmd: ## Run a tofu command. Usage: make tofu_run_cmd CMD="command"
 		tofu workspace select -or-create $${TERRAFORM_WORKSPACE} && \
 		tofu $(CMD)
 
-code_deploy: ## Deploy the frontend code to the bucket
-	. ./source.sh && \
-		yarn && \
-		yarn run build && \
-		gsutil -m rm -r gs://$${TF_VAR_frontend_bucket_name}/* || true && \
-		gsutil -m cp -r dist/* gs://$${TF_VAR_frontend_bucket_name}
+code_deploy: ## Deploy the backend code
 
 infra_deploy: ## Deploy the infrastructure
 	$(MAKE) tofu_run_cmd CMD="apply -auto-approve"
